Mon Apr 14 19:17:26 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/RequestedDeadlineWatchdog.cpp:

          Additional Watchdog logging at debug level 6 and up

        * tests/DCPS/Deadline/run_test.pl:

          Run test at debug level 6.

Mon Apr 14 19:01:34 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/publisher_main.cpp:

          Fixed error in error statement.

Mon Apr 14 18:55:30 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/Subscriber.cpp:

          Removed verbose check on setup (one time) logging messages to better
          diagnose when in the sequence of events errors are happening.

Mon Apr 14 17:42:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/Subscriber.cpp:

          Added logging error for not associating the publication and
          subscription.

Mon Apr 14 16:35:35 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logic to determine if lock is held prior to editing the head
          of the waiting_list_.

Mon Apr 14 15:15:44 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logic to determine if lock is held prior to waiting on the
          condition.

        * tests/DCPS/Priority/Publisher.cpp:

          Changing path of logic that is taken in
          WriteDataContainer::obtain_buffer to prevent errors (let
          tests/DCPS/FooTest5 track the obtain_buffer error).

Mon Apr 14 12:08:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:

          Added back kludge 2 second delay before publisher starts
          writing.

Sat Apr 12 11:53:44 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Subscriber.cpp:
